# email

./: .clang-format  .gitignore  CMakeLists.txt
include/: Connection.hpp  ConnectionData.hpp  Data.hpp  Request.hpp  State.hpp  connection.hpp  data.hpp  request.hpp  server.hpp  state.hpp
include/Server/: ConfigParser.hpp  Connection.hpp  ConnectionContext.hpp  SecuredStream.hpp  Server.hpp  ServerConfig.hpp
include/Smtp/: DataCommand.hpp  EhloCommand.hpp  HeloCommand.hpp  MailCommand.hpp  NoopCommand.hpp  QuitCommand.hpp  RcptCommand.hpp  RsetCommand.hpp  SmtpCommand.hpp  SmtpCommandId.hpp  SmtpParser.hpp  StartTlsCommand.hpp  Token.hpp  TokenId.hpp  TokenReader.hpp
include/State/: State.hpp  StateId.hpp  StateMachine.hpp  StateTable.hpp  StateTransition.hpp
lib/catch/: CMakeLists.txt
src/: CMakeLists.txt  Connection.cpp  Request.cpp  Server.cpp  State.cpp  connection.cpp  main.cpp  request.cpp  server.cpp  state.cpp
src/Server/: ConfigParser.cpp  Connection.cpp  ConnectionContext.cpp  SecuredStream.cpp  Server.cpp  ServerConfig.cpp
src/Smtp/: DataCommand.cpp  EhloCommand.cpp  HeloCommand.cpp  MailCommand.cpp  NoopCommand.cpp  QuitCommand.cpp  RcptCommand.cpp  RsetCommand.cpp  SmtpParser.cpp  StartTlsCommand.cpp  Token.cpp  TokenReader.cpp
src/State/: State.cpp  StateMachine.cpp  StateTable.cpp  StateTransition.cpp
test/: CMakeLists.txt  ConfigParserTest.cpp  ServerConfigTest.cpp  SmtpParserTest.cpp  TokenReaderTest.cpp
