add_executable(TokenReaderTest TokenReaderTest.cpp)
target_link_libraries(TokenReaderTest PRIVATE TokenReader Catch2::Catch2)
catch_discover_tests(TokenReaderTest TEST_PREFIX TokenReaderTest_)

add_executable(SmtpParserTest SmtpParserTest.cpp)
target_link_libraries(SmtpParserTest PRIVATE SmtpParser Catch2::Catch2)
if(WIN32)
  target_link_libraries(SmtpParserTest wsock32 ws2_32)
endif()
catch_discover_tests(SmtpParserTest TEST_PREFIX SmtpParserTest_)