add_executable(SmtpParserTest SmtpParserTest.cpp)
target_link_libraries(SmtpParserTest SmtpParser Catch2::Catch2 ssl crypto)
if(WIN32)
  target_link_libraries(SmtpParserTest wsock32 ws2_32)
endif()
catch_discover_tests(SmtpParserTest TEST_PREFIX SmtpParserTest_)

add_executable(ServerConfigTest ServerConfigTest.cpp)
target_link_libraries(ServerConfigTest ServerConfig Catch2::Catch2)
catch_discover_tests(ServerConfigTest TEST_PREFIX ServerConfigTest_)